force-app/main/default/objects/AF_VehicleReservation__c/AF_VehicleReservation__c.object-meta.xml
<CustomObject>
    <label>Vehicle Reservation</label>
    <nameField>
        <displayFormat>RES-{00000}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Reservations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>