force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_Contact__c.field-meta.xml
<CustomField>
    <fullName>AF_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Brand Profile contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicle Reservations</relationshipLabel>
    <relationshipName>AF_VehicleReservations</relationshipName>
    <type>Lookup</type>
</CustomField>