force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_ContractDocumentReference__c.field-meta.xml
<CustomField>
    <fullName>AF_ContractDocumentReference__c</fullName>
    <description>Generated post-gates; manual signing only in R1.</description>
    <label>Contract Document Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>