force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_ContractGeneratedDate__c.field-meta.xml
<CustomField>
    <fullName>AF_ContractGeneratedDate__c</fullName>
    <description>When the Reservation Contract document was generated by AF_ReservationContractService (ALF-RS-08 FR14). Blank means no contract exists yet.</description>
    <label>Contract Generated Date</label>
    <type>DateTime</type>
</CustomField>