force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_ContractType__c.field-meta.xml
<CustomField>
    <fullName>AF_ContractType__c</fullName>
    <label>Contract Type / Duration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3-Day (No Deposit)</fullName>
            </value>
            <value>
                <fullName>7-Day (Deposit)</fullName>
            </value>
            <value>
                <fullName>VIP / Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>