force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_DepositAmount__c.field-meta.xml
<CustomField>
    <fullName>AF_DepositAmount__c</fullName>
    <label>Deposit Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>