force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_DepositRequired__c.field-meta.xml
<CustomField>
    <fullName>AF_DepositRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evaluated vs per-brand/BU threshold matrix — matrix values pending client (OPN placeholder).</description>
    <label>Deposit Required?</label>
    <type>Checkbox</type>
</CustomField>