force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>AF_ExpiryDate__c</fullName>
    <description>Contract type drives expiry. VIP/Extended = open-ended, leave blank.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>