force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_ExtendedFromReservation__c.field-meta.xml
<CustomField>
    <fullName>AF_ExtendedFromReservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The original reservation this one extends. Gives the approving manager the prior reservation&apos;s history in one click and lets reservation-aging reports follow an extension chain.</description>
    <label>Extended From Reservation</label>
    <referenceTo>AF_VehicleReservation__c</referenceTo>
    <relationshipLabel>Extensions</relationshipLabel>
    <relationshipName>AF_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>