force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_IsExtension__c.field-meta.xml
<CustomField>
    <fullName>AF_IsExtension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ALF-RS-08 FR9: marks this reservation as an extension of an existing one. Any extension requires manager approval regardless of contract tier or deposit, so AF_FL_Reservation_EvaluateApproval short-circuits straight to Pending when this is true.</description>
    <label>Is Extension?</label>
    <type>Checkbox</type>
</CustomField>