force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_KeyloopReservationReference__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopReservationReference__c</fullName>
    <externalId>true</externalId>
    <label>Keyloop Reservation Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>