force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_LastReminderSentDate__c.field-meta.xml
<CustomField>
    <fullName>AF_LastReminderSentDate__c</fullName>
    <description>Last date AF_ReservationReminderBatch sent an expiry reminder for this reservation. The batch uses it to honour AF_ReminderIntervalDays__c and to avoid sending twice in one day if the job is re-run.</description>
    <label>Last Reminder Sent Date</label>
    <type>Date</type>
</CustomField>