force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AF_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vehicle Reservations</relationshipLabel>
    <relationshipName>AF_VehicleReservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>