force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_Payment__c.field-meta.xml
<CustomField>
    <fullName>AF_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deposit linkage</description>
    <label>Payment</label>
    <referenceTo>AF_Payment__c</referenceTo>
    <relationshipLabel>Vehicle Reservations</relationshipLabel>
    <relationshipName>AF_VehicleReservations</relationshipName>
    <type>Lookup</type>
</CustomField>