force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_Product__c.field-meta.xml
<CustomField>
    <fullName>AF_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Vehicle Reservations</relationshipLabel>
    <relationshipName>AF_VehicleReservations</relationshipName>
    <type>Lookup</type>
</CustomField>