force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_RemainingBalance__c.field-meta.xml
<CustomField>
    <fullName>AF_RemainingBalance__c</fullName>
    <description>Derived: price+add-ons minus deposits. Populate via automation, not a stored formula yet (source figures not finalized).</description>
    <label>Remaining Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>