force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_ReminderCount__c.field-meta.xml
<CustomField>
    <fullName>AF_ReminderCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many expiry reminders have gone out for this reservation. Useful for reservation-aging reporting and for proving FR5 behaviour in QA.</description>
    <label>Reminder Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>