force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_RequestedExtraDays__c.field-meta.xml
<CustomField>
    <fullName>AF_RequestedExtraDays__c</fullName>
    <description>ALF-RS-08 FR8c: a 3-Day (No Deposit) reservation held beyond the standard 3-day window requires manager approval. A rep sets this to the number of additional days they&apos;re requesting (added on top of the standard 3); leaving it blank or zero keeps the standard 3-day window with no approval needed. Ignored for 7-Day (Deposit) and VIP/Extended - the 7-day window is fixed by contract type, and VIP/Extended&apos;s period comes from the approving manager directly on AF_ExpiryDate__c, not from this field.</description>
    <label>Requested Extra Days (No-Deposit)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>