force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_StartDate__c.field-meta.xml
<CustomField>
    <fullName>AF_StartDate__c</fullName>
    <label>Reservation Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>