force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_Status__c.field-meta.xml
<CustomField>
    <fullName>AF_Status__c</fullName>
    <description>Expired/Cancelled should trigger stock release (INT-010).</description>
    <label>Reservation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>