force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_StockReleaseStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_StockReleaseStatus__c</fullName>
    <label>Stock Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Pending Release</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>