force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_TradeInAsDeposit__c.field-meta.xml
<CustomField>
    <fullName>AF_TradeInAsDeposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approved trade-in on same Opportunity.</description>
    <label>Trade-In Used As Deposit?</label>
    <type>Checkbox</type>
</CustomField>