force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>AF_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stock path. At least one of Vehicle / Vehicle Definition required (DAT dictionary) — enforce via validation rule.</description>
    <label>Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Vehicle Reservations</relationshipLabel>
    <relationshipName>AF_VehicleReservations</relationshipName>
    <type>Lookup</type>
</CustomField>