force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_VehicleDefinition__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>No-VIN path. At least one of Vehicle / Vehicle Definition required.</description>
    <label>Vehicle Definition</label>
    <referenceTo>VehicleDefinition</referenceTo>
    <relationshipLabel>Vehicle Reservations</relationshipLabel>
    <relationshipName>AF_VehicleReservations</relationshipName>
    <type>Lookup</type>
</CustomField>