force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_VehiclePriceTotal__c.field-meta.xml
<CustomField>
    <fullName>AF_VehiclePriceTotal__c</fullName>
    <description>Vehicle price plus add-ons for this reservation - the ceiling the deposit may not exceed under ALF-RS-08 FR10, and the figure the remaining balance is calculated from. Populated by AF_FL_Reservation_SyncPricing from the linked Quote&apos;s grand total when blank.</description>
    <label>Vehicle Price + Add-Ons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>