force-app/main/default/objects/AF_VehicleReservation__c/fields/AF_VehicleSourceType__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleSourceType__c</fullName>
    <description>ALF-RS-08 FR4: which stock scenario this reservation covers. In Stock and In Transit / Ordered both point at a real Vehicle record; Pre-Order (Placeholder) uses AF_VehicleDefinition__c only, because no VIN exists yet. AF_VR_VehicleSourceMatchesVehicle enforces the pairing.</description>
    <label>Vehicle Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>In Transit / Ordered</fullName>
            </value>
            <value>
                <fullName>Pre-Order (Placeholder)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>