force-app/main/default/objects/AF_VehicleReservation__c/validationRules/AF_VR_ExpiryAfterStart.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_ExpiryAfterStart</fullName>
    <active>true</active>
    <description>Guards manual edits to the flow-derived expiry date: a reservation cannot expire before it starts.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(AF_ExpiryDate__c)),
  NOT(ISBLANK(AF_StartDate__c)),
  AF_ExpiryDate__c &lt; AF_StartDate__c
)</errorConditionFormula>
    <errorDisplayField>AF_ExpiryDate__c</errorDisplayField>
    <errorMessage>Expiry date cannot be earlier than the reservation start date.</errorMessage>
</ValidationRule>