force-app/main/default/objects/AF_VehicleReservation__c/validationRules/AF_VR_Reservation_NoSkipOnInsert.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_Reservation_NoSkipOnInsert</fullName>
    <active>true</active>
    <description>QA fix (Defect #3): blocks inserting a reservation directly as Expired/Converted/Cancelled, skipping the real lifecycle. EvaluateApproval only sets Requested/Pending Approval/Reserved on create.</description>
    <errorConditionFormula>AND(
  ISNEW(),
  OR(
    ISPICKVAL(AF_Status__c, &quot;Expired&quot;),
    ISPICKVAL(AF_Status__c, &quot;Converted&quot;),
    ISPICKVAL(AF_Status__c, &quot;Cancelled&quot;)
  )
)</errorConditionFormula>
    <errorMessage>A reservation cannot be created directly as Expired, Converted, or Cancelled - it must start as Requested and progress through the real lifecycle.</errorMessage>
</ValidationRule>