force-app/main/default/objects/AF_VehicleReservation__c/validationRules/AF_VR_VehicleRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_VehicleRequired</fullName>
    <active>true</active>
    <description>ALF-RS-08 FR4 backstop: a reservation must hold something. Catches the case where neither a Vehicle nor a Vehicle Definition is set and the source type was left blank, which would otherwise save a reservation against no stock at all.</description>
    <errorConditionFormula>AND(
  ISBLANK(AF_Vehicle__c),
  ISBLANK(AF_VehicleDefinition__c)
)</errorConditionFormula>
    <errorMessage>A reservation must reference either a Vehicle (in stock / in transit) or a Vehicle Definition (pre-order placeholder).</errorMessage>
</ValidationRule>