force-app/main/default/objects/AF_VehicleReservation__c/listViews/All_Reservations.listView-meta.xml
<ListView>
    <fullName>All_Reservations</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Reservations</label>
</ListView>